update priority, view

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,8 @@
         <header class="header">
             <h1>Tareas</h1>
             <section class="main">
-                <a>Prioridad</a>
-                <br>
-                <div id="prioridades">
-
+                <H2 align="center">Prioridad</H2>
+                <div align="center" id="prioridades">
                     <input id="p1" type="radio" name="prioridad" value="1" checked>Normal
                     <input id="p2" type="radio" name="prioridad" value="2">Media
                     <input id="p3" type="radio" name="prioridad" value="3">Alta
