--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         <!-- This footer should hidden by default and shown when there are todos -->
         <footer class="footer">
             <!-- This should be `0 items left` by default -->
-            <span class="todo-count"><strong>0</strong> pendiente(s)</span>
+            <span class="todo-count"><strong> </strong></span>
             <!-- Remove this if you don't implement routing -->
             <ul class="filters">
                 <li>
