--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <h1>Tareas</h1>
             <section class="main">
                 <H2 align="center">Prioridad</H2>
-                <div align="center" id="prioridades">
+                <div align="center" id="prioridades" class="prioridades">
                     <input id="p1" type="radio" name="prioridad" value="1" checked>Normal
                     <input id="p2" type="radio" name="prioridad" value="2">Media
                     <input id="p3" type="radio" name="prioridad" value="3">Alta
@@ -65,14 +65,14 @@
                 </li>
             </ul>
             <!-- Hidden if no completed items are left ↓ -->
-            <button class="clear-completed">Borrar completados</button>
+            <button class="clear-completed">Eliminar F</button>
         </footer>
     </section>
     <footer class="info">
 
         <p>Template creado por <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
         <!-- Change this out with your name and url ↓ -->
-        <p>Lógica desarrollada por <a href="https://github.com/Nimrockdev">Javier Sánchez Gómez</a></p>
+        <p>Lógica desarrollada y mejorada por <a href="https://github.com/Nimrockdev">Javier Sánchez Gómez</a></p>
 
     </footer>
 
